[package]
name = "crafting"
version = "1.0.0"
authors = ["hardliner66"]
edition = "2018"
license = "AGPL"
description = "A small generic tool to calculate crafting times and resource usage for games."
readme = "README.md"
categories = [
	"command-line-utilities"
]

keywords = ["crafting", "gaming", "games"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = "1.0.87"
serde_derive = "1.0.87"
toml = "0.4.10"
argparse = "0.2.2"
