[package]
name = "crafting"
description = "A small generic tool to calculate crafting times and resource usage for games."
version = "1.0.0"
authors = ["hardliner66"]
edition = "2018"

homepage = "https://github.com/hardliner66/dep"
repository = "https://github.com/hardliner66/dep"

license = "AGPL"

readme = "README.md"

categories = [
	"command-line-utilities"
]

keywords = ["crafting", "gaming", "games"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = "1.0.87"
serde_derive = "1.0.87"
toml = "0.4.10"
argparse = "0.2.2"
